--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <!--FontAwesome CSS-->
     <link rel="stylesheet" href="assets/fonts/fontawesome-free-5.15.1-web/css/all.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link id="style" rel="stylesheet" href="assets/css/styleDay.css" />
 </head>
-<body class="body-day">
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-lg-none">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">CV - Maxime Pageot</a>
@@ -35,8 +35,8 @@
             <div class="col-2 tab tab-close red-close-color d-none d-lg-block" onclick="toggle(this, 'career')"><p class="text-center mt-1"><i class="fas fa-briefcase fa-2x"></i> Parcours</p></div>
             <div class="col-2 tab tab-close red-close-color d-none d-lg-block" onclick="toggle(this, 'skills')"><p class="text-center mt-1"><i class="fas fa-laptop-code fa-2x"></i> Compétences</p></div>
             <div class="col-2 tab tab-close red-close-color d-none d-lg-block" onclick="toggle(this, 'projects')"><p class="text-center mt-1"><i class="fas fa-images fa-2x"></i> Projets Réalisés</p></div>
-            <div class="col-2 tab tab-close red-close-color d-none d-lg-block" onclick="toggle(this, 'about')"><p class="text-center mt-1"><i class="fas fa-id-card fa-2x"></i> A Propos</div>
-            <div class="col-1 tab tab-open d-none d-lg-block" onclick="theme(this)"><p class="text-center mt-2"><i class="fas fa-sun fa-2x"></i></p></div>
+            <div class="col-2 tab tab-close red-close-color d-none d-lg-block" onclick="toggle(this, 'about')"><p class="text-center mt-1"><i class="fas fa-id-card fa-2x"></i> À Propos</div>
+            <div class="col-1 tab tab-open d-none d-lg-block" onclick="theme()"><p class="text-center mt-2"><i id="themeIcon" class="fas fa-sun fa-2x"></i></p></div>
             <div id="present" class="card d-block">
                 <div class="row">
                     <div class="col-12 text-center mb-5">
@@ -47,7 +47,7 @@
                     <div class="col-md-12 col-lg-10 offset-lg-1">
                         <div class="row">
                             <div class="col-md-12 col-lg-4 my-lg-auto mx-auto">
-                                <img id="profil" class="rounded-circle d-block mx-auto img-fluid" src="assets/img/photo.jpg" alt="Photo de Maxime Pageot" />
+                                <img id="profil" class="rounded-circle d-block mx-auto img-fluid" src="assets/img/small.jpg" alt="Photo de Maxime Pageot" />
                             </div>
                             <div class="col-md-12 col-lg-3 text-left my-lg-auto my-md-3">
                                 <p class="d-md-inline d-lg-block"><i class="fas fa-map-marked-alt fa-2x mx-2"></i>Roye, Picardie, France</p>
@@ -77,43 +77,6 @@
                         <hr class="subline" />
                     </div>
                     <div class="col-12">
-                        <ol>
-                            <li>
-                                <p class="text-center mt-5">BAC S</p>
-                                <span class="dot"></span>
-                                <p class="text-center">2014</p>
-                            </li>
-                            <li>
-                                <p class="text-center">BTS / DUT</p>
-                                <span class="dot"></span>
-                                <p class="text-center">2015</p>
-                            </li>
-                            <li>
-                                <p class="text-center">Licence</p>
-                                <span class="dot"></span>
-                                <p class="text-center">2016</p>
-                            </li>
-                            <li>
-                                <p class="text-center">Master</p>
-                                <span class="dot"></span>
-                                <p class="text-center">2017</p>
-                            </li>
-                            <li>
-                                <p class="text-center">Doctorat</p>
-                                <span class="dot"></span>
-                                <p class="text-center">2018</p>
-                            </li>
-                            <li>
-                                <p class="text-center">Doctorat</p>
-                                <span class="dot"></span>
-                                <p class="text-center">2019</p>
-                            </li>
-                            <li>
-                                <p class="text-center">Doctorat</p>
-                                <span class="dot"></span>
-                                <p class="text-center">2020</p>
-                            </li>
-                        </ol>
                     </div>
                 </div>  
             </div>
@@ -124,27 +87,38 @@
                         <h2>- Développeur Web & Web Mobile -</h2>
                         <hr class="subline" />
                     </div>
-                    <div class="col-md-12 col-lg-10 offset-lg-1">
-                        <div class="row">
-                            <div class="col-md-12 col-lg-4 my-lg-auto mx-auto">
-                                <img id="profil" class="rounded-circle d-block mx-auto img-fluid" src="assets/img/photo.jpg" alt="Photo de Maxime Pageot" />
-                            </div>
-                            <div class="col-md-12 col-lg-3 text-left my-lg-auto my-md-3">
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-map-marked-alt fa-2x mx-2"></i>leeelelellele</p>
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-envelope fa-2x mx-2"></i>hjfdbhjbhj</p>
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-phone fa-2x mx-2"></i>+33 (0) 6 21 29 00 09</p>
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-car fa-2x mx-2"></i>Permis B</p>
-                                <p class="d-md-inline d-lg-block"><a href="assets/img/CV 08072020.pdf" download><i class="fas fa-file-pdf fa-2x mx-2"></i>Télécharger le CV</a></p>
-                            </div>
-                            <div class="col-md-12 col-lg-5 m-auto text-center">
-                                <p>Bonjour je vous souhaite la bienvenue sur mon CV Numérique.</p>
-                                <p>Je m'appelle Maxime Pageot, j'ai 23 ans, et je suis Développeur Web.</p>
-                                <p>Passionné de l'informatique depuis mon enfance, j'ai decidé en 2019 d'entamer ma reconversion.</p>
-                                <p>Issu du monde de l'industrie, cette reconversion m'a permis de m'épanouir dans ma vie professionnelle.</p>
-                                <p>Je consacre de nombreux efforts dans ce métier et j'ai fini par obtenir en 2020 mon Titre de Développeur Web.</p>
-                                <p>De nature curieuse, calme et aimant le travail en équipe, j'aspire à mettre en application mes compétences acquises et à les développer.</p>
-                                <p>Je vous souhaite une agréable visite !</p>
-                            </div>
+                    <nav id="navbar-example3" class="navbar navbar-light col-lg-3">
+                        <a class="navbar-brand" href="#">Navbar</a>
+                        <nav class="nav nav-pills flex-column">
+                        <a class="nav-link" href="#item-1">Item 1</a>
+                            <nav class="nav nav-pills flex-column">
+                                <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
+                                <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
+                            </nav>
+                            <a class="nav-link" href="#item-2">Item 2</a>
+                            <a class="nav-link" href="#item-3">Item 3</a>
+                            <nav class="nav nav-pills flex-column">
+                                <a class="nav-link ms-3 my-1" href="#item-3-1">Item 3-1</a>
+                                <a class="nav-link ms-3 my-1" href="#item-3-2">Item 3-2</a>
+                            </nav>
+                        </nav>
+                    </nav> 
+                    <div id="skills_container" class="col-lg-9">
+                        <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0" tabindex="0">
+                            <h4 id="item-1">Item 1</h4>
+                            <p>...</p>
+                            <h5 id="item-1-1">Item 1-1</h5>
+                            <p>...</p>
+                            <h5 id="item-1-2">Item 1-2</h5>
+                            <p>...</p>
+                            <h4 id="item-2">Item 2</h4>
+                            <p>...</p>
+                            <h4 id="item-3">Item 3</h4>
+                            <p>...</p>
+                            <h5 id="item-3-1">Item 3-1</h5>
+                            <p>...</p>
+                            <h5 id="item-3-2">Item 3-2</h5>
+                            <p>...</p>
                         </div>
                     </div>
                 </div>  
@@ -152,63 +126,80 @@
             <div id="projects" class="card d-none">
                 <div class="row">
                     <div class="col-12 text-center mb-5">
-                        <h1>PROJECTS</h1>
+                        <h1>Projets Réalisés</h1>
                         <h2>- Développeur Web & Web Mobile -</h2>
                         <hr class="subline" />
                     </div>
-                    <div class="col-md-12 col-lg-10 offset-lg-1">
-                        <div class="row">
-                            <div class="col-md-12 col-lg-4 my-lg-auto mx-auto">
-                                <img id="profil" class="rounded-circle d-block mx-auto img-fluid" src="assets/img/photo.jpg" alt="Photo de Maxime Pageot" />
+                    <div class="col-1">
+                        <a class="carousel-control-prev" href="#projectCarousel" role="button" data-bs-slide="prev">
+                            <span class="fas fa-angle-double-left fa-3x" aria-hidden="true"></span>
+                            <span class="visually-hidden">Précédent</span>
+                        </a>
+                    </div>
+                    <div id="projectCarousel" class="col-10 carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="5000">
+                                <div class="row">
+                                    <div class="col-lg-8 col-12">
+                                        <img src="assets/img/fialkosport.png" class="d-block w-100" alt="Site Web Fialkosport">
+                                    </div>
+                                    <div class="col-lg-4 col-12 text-center">
+                                        <h3>Site catalogue réalisé pour l'Entreprise Fialkosport</h5>
+                                        <p>Réalisé en : HTML CSS et Bootstrap 4</p>
+                                        <p>Base de données MySQL et PHP 7 avec architecture MVC</p>
+                                        <p>Projet toujours en construction présenté à mon Titre Pro Développeur web en 2020.</p>
+                                        <p>En pause dut à l'activité de l'entreprise stoppée par la crise sanitaire.</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-md-12 col-lg-3 text-left my-lg-auto my-md-3">
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-map-marked-alt fa-2x mx-2"></i>leeelelellele</p>
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-envelope fa-2x mx-2"></i>hjfdbhjbhj</p>
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-phone fa-2x mx-2"></i>+33 (0) 6 21 29 00 09</p>
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-car fa-2x mx-2"></i>Permis B</p>
-                                <p class="d-md-inline d-lg-block"><a href="assets/img/CV 08072020.pdf" download><i class="fas fa-file-pdf fa-2x mx-2"></i>Télécharger le CV</a></p>
-                            </div>
-                            <div class="col-md-12 col-lg-5 m-auto text-center">
-                                <p>Bonjour je vous souhaite la bienvenue sur mon CV Numérique.</p>
-                                <p>Je m'appelle Maxime Pageot, j'ai 23 ans, et je suis Développeur Web.</p>
-                                <p>Passionné de l'informatique depuis mon enfance, j'ai decidé en 2019 d'entamer ma reconversion.</p>
-                                <p>Issu du monde de l'industrie, cette reconversion m'a permis de m'épanouir dans ma vie professionnelle.</p>
-                                <p>Je consacre de nombreux efforts dans ce métier et j'ai fini par obtenir en 2020 mon Titre de Développeur Web.</p>
-                                <p>De nature curieuse, calme et aimant le travail en équipe, j'aspire à mettre en application mes compétences acquises et à les développer.</p>
-                                <p>Je vous souhaite une agréable visite !</p>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <div class="row">
+                                    <div class="col-lg-8 col-12">
+                                        <img src="assets/img/cvweb.png" class="d-block w-100" alt="CV Numérique Maxime pageot">
+                                    </div>
+                                    <div class="col-lg-4 col-12 text-center">
+                                        <h3>Ce CV Web</h5>
+                                        <p>Réalisé en : HTML CSS et JavaScript</p>
+                                        <p>Framework CSS : BootStrap 5</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-1">
+                        <a class="carousel-control-next" href="#projectCarousel" role="button" data-bs-slide="next">
+                            <span class="fas fa-angle-double-right fa-3x" aria-hidden="true"></span>
+                            <span class="visually-hidden">Suivant</span>
+                        </a>
                     </div>
                 </div>  
             </div>
             <div id="about" class="card d-none">
                 <div class="row">
                     <div class="col-12 text-center mb-5">
-                        <h1>ABOUT</h1>
-                        <h2>- Développeur Web & Web Mobile -</h2>
+                        <h1>À Propos</h1>
+                        <h2>Mes Hobbies & Occupations</h2>
                         <hr class="subline" />
                     </div>
-                    <div class="col-md-12 col-lg-10 offset-lg-1">
-                        <div class="row">
-                            <div class="col-md-12 col-lg-4 my-lg-auto mx-auto">
-                                <img id="profil" class="rounded-circle d-block mx-auto img-fluid" src="assets/img/photo.jpg" alt="Photo de Maxime Pageot" />
-                            </div>
-                            <div class="col-md-12 col-lg-3 text-left my-lg-auto my-md-3">
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-map-marked-alt fa-2x mx-2"></i>leeelelellele</p>
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-envelope fa-2x mx-2"></i>hjfdbhjbhj</p>
-                                <p class="d-md-inline d-lg-block"><i claàss="fas fa-phone fa-2x mx-2"></i>+33 (0) 6 21 29 00 09</p>
-                                <p class="d-md-inline d-lg-block"><i class="fas fa-car fa-2x mx-2"></i>Permis B</p>
-                                <p class="d-md-inline d-lg-block"><a href="assets/img/CV 08072020.pdf" download><i class="fas fa-file-pdf fa-2x mx-2"></i>Télécharger le CV</a></p>
-                            </div>
-                            <div class="col-md-12 col-lg-5 m-auto text-center">
-                                <p>Bonjour je vous souhaite la bienvenue sur mon CV Numérique.</p>
-                                <p>Je m'appelle Maxime Pageot, j'ai 23 ans, et je suis Développeur Web.</p>
-                                <p>Passionné de l'informatique depuis mon enfance, j'ai decidé en 2019 d'entamer ma reconversion.</p>
-                                <p>Issu du monde de l'industrie, cette reconversion m'a permis de m'épanouir dans ma vie professionnelle.</p>
-                                <p>Je consacre de nombreux efforts dans ce métier et j'ai fini par obtenir en 2020 mon Titre de Développeur Web.</p>
-                                <p>De nature curieuse, calme et aimant le travail en équipe, j'aspire à mettre en application mes compétences acquises et à les développer.</p>
-                                <p>Je vous souhaite une agréable visite !</p>
-                            </div>
+                    <div class="col-lg-3 col-10 mb-2 mx-auto hobby">
+                        <img class="img-fluid hobbyImg" src="assets/img/pool.jpg" />
+                        <div class="overlayText">
+                            <p>Natation en tant que loisir</p>
+                            <p>Pour garder un peu la forme</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-10 mb-2 mx-auto hobby">
+                        <img class="img-fluid hobbyImg" src="assets/img/maintenance.jpg" />
+                        <div class="overlayText">
+                            <p>Maintenance informatique en autodidacte</p>
+                            <p>Autant Hardware que Software</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-10 mb-2 mx-auto hobby">
+                        <img class="img-fluid hobbyImg" src="assets/img/gaming.jpg" />
+                        <div class="overlayText">
+                            <p>Gaming</p>
+                            <p>Jeux de stratégie en temps réel & Tacticals RPGs</p>
                         </div>
                     </div>
                 </div>  
