Début de la partie skills

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                         <h2>- Développeur Web & Web Mobile -</h2>
                         <hr class="subline" />
                     </div>
-                    <nav id="navbar-example3" class="navbar navbar-light col-lg-3">
+                    <nav id="skillsNavbar" class="navbar navbar-light bg-light active col-lg-2">
                         <a class="navbar-brand" href="#">Navbar</a>
                         <nav class="nav nav-pills flex-column">
-                        <a class="nav-link" href="#item-1">Item 1</a>
+                            <a class="nav-link" href="#item-1">Item 1</a>
                             <nav class="nav nav-pills flex-column">
                                 <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
                                 <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
@@ -103,14 +103,14 @@
                             </nav>
                         </nav>
                     </nav> 
-                    <div id="skills_container" class="col-lg-9">
-                        <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0" tabindex="0">
+                    <div id="skills_container" class="col-lg-10 bg-secondary">
+                        <div data-bs-spy="scroll" data-bs-target="#skillsNavbar" data-bs-offset="0" tabindex="0">
                             <h4 id="item-1">Item 1</h4>
-                            <p>...</p>
+                            <p>Jelly beans marshmallow fruitcake jujubes. Bear claw caramels gummi bears cotton candy. Cotton candy sweet icing lemon drops. Cake gummies cheesecake pastry danish. Lemon drops pie lemon drops pie pie. Halvah sugar plum tart jelly-o lemon drops topping. Cupcake muffin croissant chupa chups cookie powder. Caramels oat cake jelly dragée gummies jelly beans lemon drops. Biscuit cupcake lollipop bear claw dragée brownie apple pie jujubes liquorice. Cheesecake chocolate chocolate bar cake jelly beans fruitcake gummi bears. Biscuit croissant pudding chocolate jelly cookie. Marzipan tart apple pie cake donut gingerbread cheesecake lemon drops.</p>
                             <h5 id="item-1-1">Item 1-1</h5>
-                            <p>...</p>
+                            <p>Jelly beans marshmallow fruitcake jujubes. Bear claw caramels gummi bears cotton candy. Cotton candy sweet icing lemon drops. Cake gummies cheesecake pastry danish. Lemon drops pie lemon drops pie pie. Halvah sugar plum tart jelly-o lemon drops topping. Cupcake muffin croissant chupa chups cookie powder. Caramels oat cake jelly dragée gummies jelly beans lemon drops. Biscuit cupcake lollipop bear claw dragée brownie apple pie jujubes liquorice. Cheesecake chocolate chocolate bar cake jelly beans fruitcake gummi bears. Biscuit croissant pudding chocolate jelly cookie. Marzipan tart apple pie cake donut gingerbread cheesecake lemon drops.</p>
                             <h5 id="item-1-2">Item 1-2</h5>
-                            <p>...</p>
+                            <p>Jelly beans marshmallow fruitcake jujubes. Bear claw caramels gummi bears cotton candy. Cotton candy sweet icing lemon drops. Cake gummies cheesecake pastry danish. Lemon drops pie lemon drops pie pie. Halvah sugar plum tart jelly-o lemon drops topping. Cupcake muffin croissant chupa chups cookie powder. Caramels oat cake jelly dragée gummies jelly beans lemon drops. Biscuit cupcake lollipop bear claw dragée brownie apple pie jujubes liquorice. Cheesecake chocolate chocolate bar cake jelly beans fruitcake gummi bears. Biscuit croissant pudding chocolate jelly cookie. Marzipan tart apple pie cake donut gingerbread cheesecake lemon drops.</p>
                             <h4 id="item-2">Item 2</h4>
                             <p>...</p>
                             <h4 id="item-3">Item 3</h4>
