ajout d'étoiles pour les compétences

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div id="skills" class="card d-none">
                 <div class="row">
                     <div class="col-12 text-center mb-5">
-                        <h1>SKILLS</h1>
+                        <h1>Compétences</h1>
                         <h2>- Développeur Web & Web Mobile -</h2>
                         <hr class="subline" />
                     </div>
@@ -103,6 +103,10 @@
                                 <a class="nav-link ms-3 my-1" href="#bs">Bootstrap 4 & 5</a>
                                 <a class="nav-link ms-3 my-1" href="#dotnet">.NET</a>
                             </nav>
+                            <a class="nav-link my-2" href="#cms" data-bs-toggle="collapse" data-bs-target="#cms_collapse" aria-expanded="false">Système de Gestion de Contenu</a>
+                            <nav id="cms_collapse" class="nav nav-pills flex-column collapse">
+                                <a class="nav-link ms-3 my-1" href="#wp">WordPress</a>
+                            </nav>
                             <a class="nav-link my-2" href="#others" data-bs-toggle="collapse" data-bs-target="#others_collapse" aria-expanded="false">Outils & Autres compétences</a>
                             <nav id="others_collapse" class="nav nav-pills flex-column collapse">
                                 <a class="nav-link ms-3 my-1" href="#software">Logiciels</a>
@@ -118,8 +122,10 @@
                                 <img class="img-fluid d-block m-auto" src="assets/img/html5.png" alt="Logo HTML 5">
                             </div>
                             <div class="col-lg-9">
-                                <h4 id="html">HyperText Markup Language 5</h4>
-                                <p>dfjkvbhjbvhjsd</p>
+                                <h4 id="html"><a href="https://fr.wikipedia.org/wiki/HTML5" target="_blank">HyperText Markup Language 5 <i class="fas fa-external-link-alt"></i></a></h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+                                <p>Bonne connaissances des bonnes pratiques HTML relatives à l'accéssibilité et aux SEO</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="row mb-5">
@@ -127,7 +133,8 @@
                                 <img class="img-fluid d-block m-auto" src="assets/img/css3.png" alt="Logo CSS 3">
                             </div>
                             <div class="col-lg-9">
-                                <h4 id="css">Cascade Style Sheets 3</h4>
+                                <h4 id="css"><a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade" target="_blank">Cascade Style Sheet 3 <i class="fas fa-external-link-alt"></i></a></h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
                                 <p>dfjkvbhjbvhjsd</p>
                             </div>
                         </div>
@@ -136,7 +143,8 @@
                                 <img class="img-fluid d-block m-auto" src="assets/img/js.png" alt="Logo JavaScript">
                             </div>
                             <div class="col-lg-9">
-                                <h4 id="js">JavaScript</h4>
+                                <h4 id="js"><a href="https://fr.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript <i class="fas fa-external-link-alt"></i></a></h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
                                 <p>dfjkvbhjbvhjsd</p>
                             </div>
                         </div>
@@ -145,7 +153,8 @@
                                 <img class="img-fluid d-block m-auto" src="assets/img/php.png" alt="Logo PHP 7">
                             </div>
                             <div class="col-lg-9">
-                                <h4 id="php">PHP HyperText PreProcessor</h4>
+                                <h4 id="php"><a href="https://fr.wikipedia.org/wiki/PHP" target="_blank">PHP HyperText Preprocessor 7 <i class="fas fa-external-link-alt"></i></a></h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></p>
                                 <p>dfjkvbhjbvhjsd</p>
                             </div>
                         </div>
@@ -154,7 +163,8 @@
                                 <img class="img-fluid d-block m-auto" src="assets/img/sql.png" alt="Logo non officiel SQL">
                             </div>
                             <div class="col-lg-9">
-                                <h4 id="sql">Structured Query Language</h4>
+                                <h4 id="sql"><a href="https://fr.wikipedia.org/wiki/Structured_Query_Language" target="_blank">Structured Query Language <i class="fas fa-external-link-alt"></i></a></h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></p>
                                 <p>dfjkvbhjbvhjsd</p>
                             </div>
                         </div>
@@ -163,7 +173,8 @@
                                 <img class="img-fluid d-block m-auto" src="assets/img/csharp.png" alt="Logo C Sharp">
                             </div>
                             <div class="col-lg-9">
-                                <h4 id="csharp">C Sharp</h4>
+                                <h4 id="csharp"><a href="https://fr.wikipedia.org/wiki/C_sharp" target="_blank">C Sharp <i class="fas fa-external-link-alt"></i></a></h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
                                 <p>dfjkvbhjbvhjsd</p>
                             </div>
                         </div>
@@ -174,7 +185,8 @@
                                 <img class="img-fluid d-block m-auto" src="assets/img/bootstrap.png" alt="Logo Bootstrap 5">
                             </div>
                             <div class="col-lg-9">
-                                <h4 id="bs">Bootstrap 4 & 5 (Framework CSS)</h4>
+                                <h4 id="bs"><a href="https://fr.wikipedia.org/wiki/Bootstrap_(framework)" target="_blank">Bootstrap 4 & 5 (Framework CSS) <i class="fas fa-external-link-alt"></i></a></h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i></p>
                                 <p>dfjkvbhjbvhjsd</p>
                             </div>
                         </div>
@@ -183,37 +195,73 @@
                                 <img class="img-fluid d-block m-auto" src="assets/img/dotnet.png" alt="Logo .NET Framework">
                             </div>
                             <div class="col-lg-9">
-                                <h4 id="dotnet">.NET (Framework C#)</h4>
+                                <h4 id="dotnet"><a href="https://fr.wikipedia.org/wiki/Framework_.NET" target="_blank">.NET (Framework C#) <i class="fas fa-external-link-alt"></i></a></h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
+                                <p>dfjkvbhjbvhjsd</p>
+                            </div>
+                        </div>
+                        <h3 id="software" class="text-center">Système de Gestion de Contenu (CMS)</h3>
+                        <hr class="subline mb-3">
+                        <div class="row mb-5">
+                            <div class="col-lg-3">
+                                <img class="img-fluid d-block m-auto" src="assets/img/wordpress.png" alt="Logo WordPress">
+                            </div>
+                            <div class="col-lg-9">
+                                <h4 id="wp">WordPress</h4>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
                                 <p>dfjkvbhjbvhjsd</p>
                             </div>
                         </div>
                         <h3 id="software" class="text-center">Logiciels Utilisés</h3>
                         <hr class="subline mb-3">
-                        <div class="row mb-5">
-                            <div class="col-lg-3">
-                                <img class="img-fluid d-block m-auto" src="assets/img/bootstrap.png" alt="Logo Bootstrap 5">
+                        <div class="row mb-5 text-center">
+                            <div class="col-lg-2">
+                                <h4>Visual Studio Code</h4>
+                                <img class="img-fluid d-block m-auto" src="assets/img/vscode.png" alt="Logo Visual Studio Code">
                             </div>
-                            <div class="col-lg-9">
-                                <h4 id="bs">Logiciels Utilisés</h4>
-                                <p>dfjkvbhjbvhjsd</p>
+                            <div class="col-lg-2">
+                                <h4>Visual Studio 2019</h4>
+                                <img class="img-fluid d-block m-auto" src="assets/img/vs2019.png" alt="Logo Visual Studio 2019">
+                            </div>
+                            <div class="col-lg-2">
+                                <h4>GIT</h4>
+                                <img class="img-fluid d-block m-auto" src="assets/img/git.png" alt="Logo GIT">
+                            </div>
+                            <div class="col-lg-2">
+                                <h4>GitHub</h4>
+                                <img class="img-fluid d-block m-auto" src="assets/img/github.png" alt="Logo GitHub">
+                            </div>
+                            <div class="col-lg-2">
+                                <h4>JMerise</h4>
+                                <img class="img-fluid d-block m-auto" src="assets/img/jmerise.png" alt="Logo JMerise">
+                            </div>
+                            <div class="col-lg-2">
+                                <h4>PHPMyAdmin</h4>
+                                <img class="img-fluid d-block m-auto" src="assets/img/phpmyadmin.png" alt="Logo PHPMyAdmin">
+                            </div>
+                            <div class="col-lg-2">
+                                <h4>WAMP</h4>
+                                <img class="img-fluid d-block m-auto" src="assets/img/wamp.png" alt="Logo WAMP">
+                            </div>
+                            <div class="col-lg-2">
+                                <h4>LAMP</h4>
+                                <img class="img-fluid d-block m-auto" src="assets/img/lamp.png" alt="Logo LAMP">
                             </div>
                         </div>
                         <h3 id="os" class="text-center">Systèmes d'exploitations</h3>
                         <hr class="subline mb-3">
                         <div class="row mb-5">
-                            <div class="col-lg-3">
+                            <div class="col-lg-3 offset-lg-2 text-center">
+                                <h4 id="dotnet">Windows</h4>
+                                <h5>XP, Vista, 7, 8.1, 10</h5>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
                                 <img class="img-fluid d-block m-auto" src="assets/img/windows.png" alt="Logo Windows">
                             </div>
-                            <div class="col-lg-9">
-                                <h4 id="dotnet">Windows</h4>
-                                <p></p>
-                            </div>
-                            <div class="col-lg-3">
-                                <img class="img-fluid d-block m-auto" src="assets/img/tux.png" alt="Tux et logo de Ubuntu">
-                            </div>
-                            <div class="col-lg-9">
+                            <div class="col-lg-3 offset-lg-2 text-center">
                                 <h4 id="dotnet">Linux</h4>
-                                <p>dfjkvbhjbvhjsd</p>
+                                <h5>Ubuntu</h5>
+                                <p class="star-color"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
+                                <img class="img-fluid d-block m-auto" src="assets/img/tux.png" alt="Tux et logo de Ubuntu">
                             </div>
                         </div>
                     </div>
